# cbioportal-tile-server

./: .env.example  Dockerfile  README.md  databricks.yml  docker-compose.yml  pyproject.toml
app/: annotation_store.py  annotations.py  auth.py  cache.py  config.py  constants.py  http_utils.py  main.py  meta.py  meta_store.py  oncokb.py  slide_store.py  slides.py  tile_routes.py  tiles.py
bench/: blockcache_bench.py  ecs_bench.py  locustfile.py
databricks/lakebase/: README.md  databricks.yml
databricks/lakebase/resources/: lakebase.yml
docs/: pathology-slide-association-waves.md  runbook.md
tests/: conftest.py  smoke.py  test_annotations_integration.py  test_annotations_unit.py  test_api.py  test_auth.py  test_auth_unit.py  test_cache.py  test_config.py  test_databricks_bundle.py  test_generate_pathology_timeline_files.py  test_generate_wsi_clinical_attrs.py  test_generate_wsi_timepoint_clinical_attrs.py  test_main_unit.py  test_meta.py  test_oncokb.py  test_patient_cache_utils.py  test_slides.py  test_summarize_canonical_validation_log.py  test_tiles.py  test_validate_canonical_associations.py  test_validate_canonical_associations_batch.py
tools/: generate_pathology_timeline_files.py  generate_resource_patient.py  generate_wsi_clinical_attrs.py  generate_wsi_timepoint_clinical_attrs.py  invalidate_patient_cache.py  migrate_all_studies.sh  patient_cache_utils.py  study_file_cleanup.py  summarize_canonical_validation_log.py  validate_canonical_associations.py  validate_canonical_associations_batch.py  write_dev_env.py  wsi_canonical_associations_pipeline.sql  wsi_summary_pipeline.sql
